Added Fontana's patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,2 @@
-AUTOMAKE_OPTIONS = foreign
-
-bindir=$(exec_prefix)
-sbindir=$(exec_prefix)
-datadir=$(exec_prefix)
-
 SUBDIRS = src data
-
-EXTRA_DIST = README README.coders ChangeLog INSTALL tools examples ReportUsage.sh UnrealModules NeedMaintainers
+EXTRA_DIST = README.coders tools examples UnrealModules NeedMaintainers
