--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/main.c)
-AM_CONFIG_HEADER(src/config.h)
+AC_CONFIG_HEADERS(src/config.h)
 AM_INIT_AUTOMAKE(thales, 1.0)
-AC_PREFIX_DEFAULT([\${HOME}/thales])
 dnl Checks for programs.
 AC_PROG_AWK
 AC_PROG_CC
@@ -48,8 +47,6 @@ AC_ARG_WITH(mysql-includes,
 AC_ARG_WITH(mysql-libraries, 
 [  --with-mysql-libraries=PFX Prefix where MySQL libraries are found (usually
                            /usr/local/lib/mysql)])
-AC_ARG_ENABLE(noreportusage,
-[  --enable-noreportusage Forget about the Usage Survey],[REPORT=0],[REPORT=1])
 
 dnl Check usr/local first, in case sys admin has installed a later version
 dnl than was included with the OS (in which case the older will be in  /usr)
@@ -145,95 +142,38 @@ fi
 
 dnl IRCD type
 
-ok=0
-reportusage=1
-if test "x$with_ircd" != "x"; then
-	case $with_ircd in
-		[[Bb][Aa][Hh][Aa][Mm][Uu][Tt]])
-			AC_DEFINE_UNQUOTED(IRCD_BAHAMUT, 1, 'ircd type')
-			echo "Using Bahamut IRCD"
-			ok=1
-			;;
-		[[Hh][Yy][Bb][Rr][Ii][Dd]])
-			AC_DEFINE_UNQUOTED(IRCD_HYBRID, 1, 'ircd type')
-			echo "Using Hybrid IRCD"
-			ok=1
-			;;
-		[[Ii][Rr][Cc][Dd][Rr][Uu]])
-			AC_DEFINE_UNQUOTED(IRCD_IRCDRU, 1, 'ircd type')
-			echo "Using IRCD-RU IRCD"
-			ok=1
-			;;
-		[[Uu][Nn][Rr][Ee][Aa][Ll]])
-			AC_DEFINE_UNQUOTED(IRCD_UNREAL, 1, 'ircd type')
-			echo "Using Unreal IRCD"
-			reportusage=0
-			ok=1
-			;;
-		[[Uu][Ll][Tt][Ii][Mm][Aa][Tt][Ee]28])
-			AC_DEFINE_UNQUOTED(IRCD_ULTI28, 1, 'ircd type')
-			echo "Using Ultimate IRCD 2.8"
-	      ok=1
-			;;
-		[[Uu][Ll][Tt][Ii][Mm][Aa][Tt][Ee]30])
-			AC_DEFINE_UNQUOTED(IRCD_ULTIMATE, 1, 'ircd type')
-			echo "Using Ultimate IRCD 3.0"
-	      ok=1
-			;;
-		*)
-			echo "IRCD type unrecognized"
-			;;
-	esac
+if test "x$with_ircd" == "x"; then
+with_ircd=bahamut
 fi
-if test $ok -eq 0; then
-	echo
-	echo "---------------------------------------------------------------"
-	echo
-	echo "Which of the following is closest to the type of server used on"
-	echo "your IRC network ?"
-	echo "    1) UnrealIRCd 3.1.1 or later"
-   echo "Support for these servers is still available but might not be"
-   echo "complete. See the NeedMaintainers file for more info."
-	echo "    2) Bahamut 1.4.27 or later"
-	echo "    3) Hybrid 7 or later"
-	echo "    4) ircd-RU! 1.4.0 or later"
-	echo "    5) UltimateIRCD 2.8 or later (2.8 branch)"
-	echo "    6) UltimateIRCD 3.0.0 or later"
-	while `test $ok -eq 0` ; do
-	echo -n '> '
-	read KBDINPUT
-	case $KBDINPUT in
-   	1)
-			AC_DEFINE_UNQUOTED(IRCD_UNREAL, 1, 'ircd type')
-			reportusage=0
-			ok=1
-			;;
-		2)
-			AC_DEFINE_UNQUOTED(IRCD_BAHAMUT, 1, 'ircd type')
-			ok=1
-			;;
-		3)
-			AC_DEFINE_UNQUOTED(IRCD_HYBRID, 1, 'ircd type')
-			ok=1
-			;;
-		4)
-			AC_DEFINE_UNQUOTED(IRCD_IRCDRU, 1, 'ircd type')
-			ok=1
-			;;
-			5)
-				AC_DEFINE_UNQUOTED(IRCD_ULTI28, 1, 'ircd type')
-	      ok=1
-	      ;;
-			6)
-				AC_DEFINE_UNQUOTED(IRCD_ULTIMATE, 1, 'ircd type')
-	      ok=1
-	      ;;
-		*)
-			echo "Please enter a valid option number."
-			;;
-	esac
-	done
-fi
+
+case $with_ircd in
+    [[Bb][Aa][Hh][Aa][Mm][Uu][Tt]])
+	AC_DEFINE_UNQUOTED(IRCD_BAHAMUT, 1, 'ircd type')
+	echo "Using Bahamut IRCD"
+	;;
+    [[Hh][Yy][Bb][Rr][Ii][Dd]])
+	AC_DEFINE_UNQUOTED(IRCD_HYBRID, 1, 'ircd type')
+	echo "Using Hybrid IRCD"
+	;;
+    [[Ii][Rr][Cc][Dd][Rr][Uu]])
+	AC_DEFINE_UNQUOTED(IRCD_IRCDRU, 1, 'ircd type')
+	echo "Using IRCD-RU IRCD"
+	;;
+    [[Uu][Nn][Rr][Ee][Aa][Ll]])
+	AC_DEFINE_UNQUOTED(IRCD_UNREAL, 1, 'ircd type')
+	echo "Using Unreal IRCD"
+	;;
+    [[Uu][Ll][Tt][Ii][Mm][Aa][Tt][Ee]28])
+	AC_DEFINE_UNQUOTED(IRCD_ULTI28, 1, 'ircd type')
+	echo "Using Ultimate IRCD 2.8"
+	;;
+    [[Uu][Ll][Tt][Ii][Mm][Aa][Tt][Ee]30])
+	AC_DEFINE_UNQUOTED(IRCD_ULTIMATE, 1, 'ircd type')
+	echo "Using Ultimate IRCD 3.0"
+	;;
+    *)
+	AC_MSG_ERROR([IRCD type unrecognized])
+esac
 
 AC_ARG_ENABLE(no-modes, 
 [  --enable-no-modes Disables modes in the database (modes are enabled by default)],
@@ -241,9 +181,6 @@ AC_ARG_ENABLE(no-modes,
 
 AC_OUTPUT(src/Makefile data/Makefile Makefile)
 
-if test $REPORT -eq 1 -a $reportusage -eq 1; then
-	./ReportUsage.sh
-fi
 echo
 echo "Thales will be installed in ${prefix}. To change this, run :"
 echo "     ./configure --prefix=DIRECTORY"
