--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(src/main.c)
+AC_INIT([GNU Thales], [1.1], [klaus.weiss@nanet.at])
 AC_CONFIG_HEADERS(src/config.h)
-AM_INIT_AUTOMAKE(thales, 1.0)
+AM_INIT_AUTOMAKE()
 dnl Checks for programs.
 AC_PROG_AWK
 AC_PROG_CC
