Fast fix of build problem. TODO: Why gnulib get builded to libthales, not libgnu?

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,4 +3,4 @@ AM_CFLAGS = -I$(top_srcdir)/lib
 bin_PROGRAMS = thales
 thales_SOURCES = main.c cmd.h cmd.c conf.h conf.c worker.h \
 	log_worker.h log_worker.c irc.h irc.c
-thales_LDADD = $(top_builddir)/lib/libgnu.a
+thales_LDADD = $(top_builddir)/lib/libthales.a
