Added defaults values for connection. Added new gnulib module.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -17,7 +17,7 @@
 
 
 # gnulib modules used by this package.
-gnulib_modules="list xlist"
+gnulib_modules="list xlist xstrndup"
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
 XGETTEXT_OPTIONS=$XGETTEXT_OPTIONS'\\\
