Some research about mysql. More tables planning required

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ AM_CFLAGS = -I$(top_srcdir)/lib
 bin_PROGRAMS = thales
 thales_SOURCES = main.c cmd.h cmd.c conf.h conf.c worker.h \
 	log_worker.h log_worker.c error.h workers_registration.c \
-	workers_registration.h irc.h irc.c defaults.c defaults.h
+	workers_registration.h irc.h irc.c defaults.c defaults.h \
+	sentry.h mysql_sentry.h mysql_sentry.c
 
 thales_LDADD = $(top_builddir)/lib/libthales.a
