Added autogened query listings

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,8 @@ AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE
 # Checks for programs.
 AC_PROG_CC_C99
+AC_CHECK_PROGS([AUTOGEN], [autogen],
+                          [AC_MSG_ERROR([GNU Autogen required, but not found])])
 gl_EARLY
 gl_INIT
 AC_GNU_SOURCE
@@ -13,10 +15,10 @@ AC_CHECK_HEADER([libircclient/libircclient.h],[],
         [AC_MSG_ERROR([libircclient header not found])])
 AC_CHECK_LIB([ircclient],[irc_create_session],[],
         [AC_MSG_ERROR([libircclient library not found])])
-AC_CHECK_HEADER([mysql/mysql.h],[],
-        [AC_MSG_ERROR([Mysql header not found])])
-AC_CHECK_LIB([mysqlclient],[mysql_real_connect],[],
-        [AC_MSG_ERROR([Mysql library not found])])
+AC_CHECK_HEADER([dbi/dbi.h],[],
+        [AC_MSG_ERROR([Libdbi headers not found])])
+AC_CHECK_LIB([dbi],[dbi_conn_new],[],
+        [AC_MSG_ERROR([Libdbi library not found])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
