Fixed prebuild Makefile commands

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -17,6 +17,7 @@
 
 
 # gnulib modules used by this package.
+gnulib_name=libgnu
 gnulib_modules="list xlist xstrndup"
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
