Replace sql interface with TSV output on stdout.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -18,7 +18,7 @@
 
 # gnulib modules used by this package.
 gnulib_name=libgnu
-gnulib_modules="list xlist xstrndup"
+gnulib_modules="xoset rbtree-oset"
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
 XGETTEXT_OPTIONS=$XGETTEXT_OPTIONS'\\\
