--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AM_INIT_AUTOMAKE
 # Checks for programs.
 AC_PROG_CC_C99
 AC_CHECK_PROGS([AUTOGEN], [autogen],
-                          [AC_MSG_ERROR([GNU Autogen required, but not found])])
+                          [AC_MSG_WARN([GNU Autogen required for developer build])])
 gl_EARLY
 gl_INIT
 AC_GNU_SOURCE
@@ -15,9 +15,9 @@ AC_CHECK_HEADER([libircclient/libircclient.h],[],
         [AC_MSG_ERROR([libircclient header not found])])
 AC_CHECK_LIB([ircclient],[irc_create_session],[],
         [AC_MSG_ERROR([libircclient library not found])])
-AC_CHECK_HEADER([dbi/dbi.h],[],
+AC_CHECK_HEADER([mysql/mysql.h],[],
         [AC_MSG_ERROR([Libdbi headers not found])])
-AC_CHECK_LIB([dbi],[dbi_conn_new],[],
+AC_CHECK_LIB([mysqlclient],[mysql_real_connect],[],
         [AC_MSG_ERROR([Libdbi library not found])])
 
 # Checks for typedefs, structures, and compiler characteristics.
