--- a/src/lisp/Makefile.am
+++ b/src/lisp/Makefile.am
@@ -1,5 +1,8 @@
 ircdir= @GUILE_SITE@/im
 irc_DATA= im/irc.scm
 
-preludedir= @GUILE_SITE@/
-prelude_DATA=prelude.scm
+preludedir= @GUILE_SITE@/functional
+prelude_DATA=functional/prelude.scm
+
+thalesdir= @GUILE_SITE@/thales
+thales_DATA=thales/init-database.scm
